2008-07-28  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml First version of the test system

2008-07-27  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Empty element tags written only for elements 
	declared as empty in DTD.

2008-06-26  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Updated DTD data.
	* html2xhtml Ported dtd_query from the old source tree.

2008-06-17  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as stable, version 1.1.1.

2008-05-29  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Removed the REJECT rule from the parser.

2008-05-22  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Fixed a bug in the CGI related to charset.

2008-04-17  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as 1.1b6

2008-04-08  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Fixed two bugs related to incorrect memory access.

2008-03-31  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Fixed a bug when "<" and "&" follow "]" in CDATA.
	* html2xhtml Fixed whitespace problems with entity references.
	* html2xhtml Entity reference "percnt" is replaced by "%". 
	* html2xhtml Flexibility added to the parser: allows closing 
	XML PIs with ">" instead of "%>"
	
2008-03-05  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as 1.1b5

2008-03-03  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Fixed a bug when an end tags appears inside
	a script. The end tag was not properly wrapped inside a CDATA
	section.
	* html2xhtml Fixed a bug in the CGI: comments were not properly
	escaped.
	* html2xhtml Changed the result page of the CGI to make it
	look closer to the other pages of the html2xhtml website.

2008-01-16  Jesus Arias Fisteus <jaf@it.uc3m.es>

	* html2xhtml Released as 1.1b4

	* html2xhtml Fixed some bugs with Windows carriage returns.

	* html2xhtml Fixed a bug when line breaks appeared inside
	attribute values.

	* html2xhtml Added the --compact-block-elements option.
